...
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/menuButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:text="@string/save_label"
...
