...
        <variable
            name="viewModel"
            type="com.kremnev8.electroniccookbook.components.ingredient.edit.viewmodel.IngredientEditViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/ingredientsEditLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".components.ingredient.edit.fragment.IngredientEditFragment">

...
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name_label"
                android:importantForAutofill="no"
...
